# nais-verification

./: .dockerignore  .earthignore  .gitignore  .prospector.yaml  Dockerfile  Earthfile  README.md  mise.toml  pyproject.toml
.github/workflows/: codeql.yml  helm-charts.yaml  main.yml
.mise-tasks/: build  fmt  fmt-check  lint  lint-fix  setup  test
charts/nais-verification/: Chart.yaml  Feature.yaml  values.yaml
charts/nais-verification/templates/: _helpers.tpl  _job_template.yaml  create_deploy_key_job.yaml  create_team_job.yaml  netpol.yaml  secret.yaml  serviceaccount.yaml  update_deploy_key_cronjob.yaml
nais_verification/: auth.py  deploy_key.py  main.py  settings.py  team.py
