[tool.poetry]
name = "nais-verification"
version = "0.1.0"
description = ""
authors = ["Morten Lied Johansen <morten.lied.johansen@nav.no>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nais_verification"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
gql = {version = "^3.5.3", extras = ["requests"]}
requests = "<3"
fiaas-logging = "<1"
k8s = "<1"
pydantic-settings = "^2.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
prospector = "^1.17.3"
setuptools = "^75.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nais-verification = "nais_verification.main:main"
